# ilsp

./: .gitconfig  .gitignore  ORGANISATION.md  README.md  environment.yml  mnist_default_assessor.csv  pyproject.toml
archive_tf/: model_tensorflow.py  test_dataset_extra.py  test_dataset_extra_tensorflow.py
archive_tf/models/: _base_models.py  cifar10.py  segment.py
assessors/: __main__.py  application.py  datasets.py  hubs.py  main.py
assessors/cli/: __init__.py  cli.py  shared.py
assessors/cli/commands/: dataset.py  dataset_download.py  dataset_make.py  debug.py  end2end.py  evaluate.py  inference.py  report.py  train.py  train_.py  train_assessor.py  train_base_kfold.py  train_base_single.py
assessors/commands/: __init__.py  dataset_download.py  dataset_make.py  debug.py  debug_list_dataset.py  debug_list_dataset_split.py  debug_peek_dataset.py  download_dataset.py  end2end.py  evaluate.py  evaluate_assessor.py  evaluate_system.py  inference.py  report.py  report_regen.py  train_.py  train_assessor.py  train_base_kfold.py  train_base_single.py
assessors/core/: __init__.py  dataset.py  dataset_segment.py  dataset_tensorflow.py  dataset_torch.py  datasets.py  datatypes.py  model.py  model_tensorflow.py  record.py  tf_model.py
assessors/models/: __init__.py  _base_models.py  cifar10.py  mnist.py  model.py  segment.py
assessors/models/abstraction/: model.py  tf_model.py
assessors/models/architectures/: wide_resnet.py
assessors/models/torch/: model.py
assessors/report/: __init__.py  cli_report.py  components.py  plotting.py  renderer.py  report.py  wrap.py
assessors/report/html_report/: __init__.py  components.py  html_report.py  renderer.py
assessors/tests/utils/: test_dataset_extra.py
assessors/utils/: callbacks_extra.py  cli.py  dataset_extra.py  dataset_extra_tensorflow.py  setup.py
experiments/: cifar10.py  mnist.py
experiments/kfold/: analyse.ipynb  assessors.py  experiment.py
notebooks/: AAAI22_plots.ipynb  Experiment1.ipynb  analyse.ipynb  analyse_prob.ipynb  report_result.py  view_report.ipynb  visualize.ipynb
pp/: __main__.py
pp/cli/: app.py  entry.py
pp/cli/commands/: __init__.py  debug_gpu.py
pp/utils/: gpu.py
scripts/: gpu.py  gpu_tf.py  temp.py
shared/: __init__.py
shared/baselines/: cifar10.py  mnist.py
shared/models/: wide_resnet.py
shared/util/: callbacks_extra.py  click_extra.py  dataset_extra.py  tf_logging.py
