[tool.poetry]
name        = "assessors"
version     = "0.1.0"
description = ""
authors     = ["Wout Schellaert <wout.schellaert@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
# Tensorflow 2.7 does not detect conda CUDA installation anymore
# It can be worked around through:
# `export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib`
# https://github.com/tensorflow/tensorflow/issues/52988
tensorflow-gpu         = "2.7.0"
tensorflow-datasets    = "^4.4.0"
tqdm                   = "^4.62.3"
pandas                 = "^1.3.3"
tensorflow-probability = "^0.15.0"

[tool.poetry.dev-dependencies]
ipywidgets         = "^7.6.3"
click              = "^8.0.1"
mypy               = "^0.910"
autopep8           = "^1.5.7"
pylint             = "^2.9.6"
jupyterlab         = "^3.1.1"
ipykernel          = "^6.0.3"
nbdime             = "^3.1.0"
poethepoet         = "^0.10.0"
wandb              = "^0.11.2"
Pillow             = "^8.3.1"  # Needed for wandb Image logging
click-option-group = "^0.5.3"
pytest             = "^6.2.5"
scikit-learn       = "^1.0.1"
matplotlib         = "^3.4.3"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
jpt  = { shell = "jupyter lab --no-browser --port=8888" }
run  = { script = "assessors.main:run" }
test = { shell = "pytest --pyargs assessors" }
gpu  = { shell = "python scripts/gpu_test.py" }
type = { shell = "mypy assessors" }

[tool.pytest.ini_options]
filterwarnings = [
  'ignore:the imp module is deprecated:DeprecationWarning', # Thrown by TF 2.6, check on update
]

[tool.mypy]
ignore_missing_imports = true
