[tool.poetry]
name        = "assessors"
version     = "0.1.0"
description = ""
authors     = ["Wout Schellaert <wout.schellaert@gmail.com>"]

[tool.poetry.dependencies]
python       = "3.9"
tqdm         = "^4.62.3"
pandas       = "^1.3.3"
ipywidgets   = "^7.6.3"
click        = "^8.0.1"
jupyterlab   = "^3.1.1"
ipykernel    = "^6.0.3"
scikit-learn = "^1.0.1"
matplotlib   = "^3.4.3"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
nbdime     = "^3.1.0"
mypy       = "^0.910"
autopep8   = "^1.5.7"
pytest     = "^6.2.5"
pylint     = "^2.9.6"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
jpt  = { cmd = "jupyter lab --no-browser --port=8888" }
run  = { cmd = "python -m assessors" }
test = { cmd = "pytest --pyargs assessors" }
type = { cmd = "mypy assessors" }
temp = { cmd = "python scripts/temp.py" }
gpu  = { cmd = "python scripts/gpu.py" }

# From packages
cdc-hello = { script = "assessors.packages.click_dataclass.examples.hello:cli" }
cdc-path  = { script = "assessors.packages.click_dataclass.examples.path:cli" }
tdt-test  = { cmd = "pytest --pyargs assessors.packages.torch_datatools " }

[tool.mypy]
ignore_missing_imports = true
