[tool.poetry]
name        = "assessors"
version     = "0.1.0"
description = ""
authors     = ["Wout Schellaert <wout.schellaert@gmail.com>"]

[tool.poetry.dependencies]
python            = "3.9"
pytorch-lightning = "^1.5.8"
pandas            = "^1.3.3"
tqdm              = "^4.62.3"
click             = "^8.0.1"
scikit-learn      = "^1.0.1"
jupyterlab        = "^3.1.1"
ipywidgets        = "^7.6.3"
ipykernel         = "^6.0.3"
matplotlib        = "^3.4.3"
torchmetrics      = "^0.6.2"
poethepoet        = "^0.10.0"

[tool.poetry.dev-dependencies]
nbdime   = "^3.1.0"
mypy     = "^0.910"
autopep8 = "^1.5.7"
pytest   = "^6.2.5"
pylint   = "^2.9.6"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
jpt  = { cmd = "jupyter lab --no-browser --port=8888" }
run  = { cmd = "python -m pp" }
test = { cmd = "pytest --pyargs pp" }
type = { cmd = "mypy assessors" }
